[package]
name = "support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.0"
filesize = "0.2.0"
sysinfo = "0.28.1"
protobuf = "3.2.0"

[build-dependencies]
protobuf-codegen = "3.2.0"

[lib]
crate_type = ["cdylib"]
